src/pages/MainPage/HomeSection/SliderInfos/SliderInfos.css
.slider-buttons {
  display: flex;
  column-gap: 40px;
}

.slider-buttons .button {
  color: rgba(var(--rgb-primary), 40%);
  border: none;
  background: none;
}

.slider-buttons .button.active {
  color: var(--color-accentuation);
}

.slider-bar {
  position: relative;
  width: 300px;
  margin-top: 8px;
}

.slider-entire-bar,
.slider-inner-bar {
  position: absolute;
  display: inline-block;
  height: 5px;
  border-radius: var(--radius-large);
  background-color: rgba(255, 255, 255, 40%);
}

.slider-entire-bar {
  width: 100%;
  background-color: rgba(255, 255, 255, 40%);
}

.slider-inner-bar {
  background-color: var(--color-accentuation);
  transition: width 0.5s ease-in-out;
}

.slider-content {
  margin-top: 38px;
}

.slider-content[data-state="switch-begin"] {
  animation: fade-out 0.5s ease-out both;
}

.slider-content[data-state="switch-end"] {
  animation: fade-in 0.5s ease-out both;
}

@media screen and (max-width: 960px) {
  .slider-bar {
    width: 250px;
  }

  .slider-controls {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .slider-content {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }
}

